--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       --muted: #a1a1a8;
       --pill-green: #45ff6d;
       --pill-red: #ff4945;
-      --star-img: url('star.png');
     }
-    * { box-sizing: border-box }
+
+    * { box-sizing: border-box; }
     body {
       background: var(--bg);
       font-family: 'Montserrat', system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
@@ -25,26 +25,32 @@
       display: flex;
       justify-content: center;
     }
+
     .container {
-      width: 350px;
+      width: 100%;
+      max-width: 420px;
       display: flex;
       flex-direction: column;
-      gap: 12px;
+      gap: 14px;
+      padding: 0 12px;
     }
+
     .panel {
       background: var(--card);
       border-radius: 16px;
-      padding: 10px 12px;
+      padding: 12px 14px;
       display: flex;
       align-items: center;
       justify-content: space-between;
+      font-size: 15px;
     }
+
     .status-pill {
-      padding: 4px 10px;
+      padding: 6px 12px;
       border-radius: 999px;
       font-weight: 600;
       text-transform: uppercase;
-      font-size: 12px;
+      font-size: 13px;
       letter-spacing: .3px;
     }
     .found { background: var(--pill-green); color: var(--text); }
@@ -53,63 +59,103 @@
     #gift-list {
       display: flex;
       flex-direction: column;
-      gap: 12px;
+      gap: 14px;
     }
+
     .gift {
       background: var(--card);
       border-radius: 16px;
-      padding: 10px 12px;
+      padding: 12px 14px;
       display: flex;
       align-items: center;
       justify-content: space-between;
       transition: transform .15s ease;
     }
-    .gift:hover { transform: translateY(-1px); }
+    .gift:hover { transform: translateY(-2px); }
 
     .left {
       display: flex;
       align-items: center;
-      gap: 10px;
+      gap: 12px;
       min-width: 0;
     }
+
     .emoji-badge {
-      width: 34px; height: 34px;
-      display: flex; align-items: center; justify-content: center;
-      border-radius: 10px;
+      width: 40px;
+      height: 40px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 12px;
       background: var(--pill);
-      font-size: 20px;
+      font-size: 24px;
       flex-shrink: 0;
     }
+
     .gid {
-      font-size: 13px;
+      font-size: 14px;
       color: var(--text);
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
+      min-width: 0;
     }
+
     .price-pill {
-      padding: 6px 10px;
-      border-radius: 10px;
+      padding: 8px 12px;
+      border-radius: 12px;
       background: var(--pill);
       font-weight: 700;
-      font-size: 12px;
+      font-size: 14px;
       color: var(--text);
-      flex-shrink: 0;
-      min-width: 48px;
-      text-align: center;
       display: flex;
       align-items: center;
       justify-content: center;
       gap: 6px;
+      flex-shrink: 0;
+      min-width: 50px;
     }
     .price-pill img {
       width: 24px;
       height: 24px;
     }
+
     .time {
-      font-size: 12px;
+      font-size: 13px;
       color: var(--muted);
       user-select: none;
+    }
+
+    /* Адаптив для маленьких экранов */
+    @media (max-width: 380px) {
+      .container {
+        padding: 0 8px;
+      }
+      .panel {
+        padding: 10px 12px;
+        font-size: 14px;
+      }
+      .status-pill { font-size: 12px; padding: 5px 10px; }
+      .gift {
+        padding: 10px 12px;
+      }
+      .emoji-badge {
+        width: 36px;
+        height: 36px;
+        font-size: 20px;
+      }
+      .gid { font-size: 13px; }
+      .price-pill {
+        font-size: 13px;
+        padding: 6px 10px;
+        gap: 4px;
+        min-width: 45px;
+      }
+      .price-pill img {
+        width: 20px;
+        height: 20px;
+      }
+      .time { font-size: 12px; }
     }
   </style>
 </head>
@@ -128,8 +174,6 @@
     const GIFTS_URL = `https://api.telegram.org/bot${TOKEN}/getAvailableGifts`;
 
     let oldGiftIds = new Set();
-    let firstLoad = true;
-    let timer = null;
 
     function timeInUTCPlus5(){
       const now = new Date();
@@ -184,7 +228,7 @@
     }
 
     loadGifts();
-    timer = setInterval(loadGifts, 1000);
+    setInterval(loadGifts, 1000);
   </script>
 </body>
 </html>
