--- a/index.html
+++ b/index.html
@@ -3,18 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gifts — minimal UI</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
   <style>
     :root {
-      --bg: #141414;
-      --card: #282727;
-      --pill: #474747;
+      --bg: #1c1b29;
+      --card: #262538;
+      --pill: #3a3950;
       --text: #ffffff;
-      --muted: #a1a1a8;
-      --pill-green: #45ff6d;
-      --pill-red: #ff4945;
-      --star-img: url('star.png');
+      --muted: #b3b1c9;
+      --pill-green: #3bd174;
+      --pill-red: #6961ff;
     }
     * { box-sizing: border-box }
     body {
@@ -39,6 +37,7 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
+      gap: 8px;
     }
     .status-pill {
       padding: 4px 10px;
@@ -47,9 +46,26 @@
       text-transform: uppercase;
       font-size: 12px;
       letter-spacing: .3px;
+      display: flex;
+      align-items: center;
+      gap: 6px;
     }
     .found { background: var(--pill-green); color: var(--text); }
     .notfound { background: var(--pill-red); color: var(--text); }
+
+    /* Лоадер */
+    .loader {
+      border: 2px solid rgba(255,255,255,0.2);
+      border-top: 2px solid white;
+      border-radius: 50%;
+      width: 14px;
+      height: 14px;
+      animation: spin 0.8s linear infinite;
+    }
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
 
     #gift-list {
       display: flex;
@@ -117,7 +133,10 @@
 <body>
   <div class="container">
     <div class="panel">
-      <div id="status-pill" class="status-pill notfound">not found</div>
+      <div id="status-pill" class="status-pill notfound">
+        <div class="loader" id="loader"></div>
+        loading
+      </div>
       <div class="time" id="status-time">--:--:-- (UTC+5)</div>
     </div>
 
@@ -125,11 +144,10 @@
   </div>
 
   <script>
-    const TOKEN = "8351765151:AAGCokDCBin_1UXIZZgVLadlkY3UIIBDxVo";
+    const TOKEN = "8240873874:AAELCOYTzUSMtth7K9rlYJnmdAB73swpfwE";
     const GIFTS_URL = `https://api.telegram.org/bot${TOKEN}/getAvailableGifts`;
 
     let oldGiftIds = new Set();
-    let firstLoad = true;
     let timer = null;
 
     function timeInUTCPlus5(){
@@ -140,14 +158,19 @@
     }
 
     async function loadGifts(){
+      const pill = document.getElementById("status-pill");
+      const loader = document.getElementById("loader");
+      const time = document.getElementById("status-time");
+      const list = document.getElementById("gift-list");
+
+      // показать лоадер
+      pill.className = "status-pill";
+      pill.innerHTML = `<div class="loader"></div> loading`;
+
       try{
         const res = await fetch(GIFTS_URL);
         const data = await res.json();
         const gifts = (data && data.result && data.result.gifts) ? data.result.gifts : [];
-
-        const list = document.getElementById("gift-list");
-        const pill = document.getElementById("status-pill");
-        const time = document.getElementById("status-time");
 
         list.innerHTML = "";
         const newIds = new Set(gifts.map(g => g.id));
@@ -180,6 +203,8 @@
 
         oldGiftIds = newIds;
       }catch(e){
+        pill.textContent = "error";
+        pill.className = "status-pill notfound";
         console.error("Ошибка загрузки:", e);
       }
     }
